--- a/index.html
+++ b/index.html
@@ -1,114 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>wellcom to myWorks</title>
-  <link rel="stylesheet" href="css/works.css"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>图片加载技术实例-欢迎关注tinyphp的博客</title>
+    <script src="js/jquery.min.js" type=text/javascript></script>
+    <script src="js/jquery.lazyload.min.js" type=text/javascript></script>
+    <script type="text/javascript" charset="utf-8">
+        $(function() {
+           var imgLazuLoad = $("img.lazy");
+            $.each(imgLazuLoad,function(){
+                var src = $(this).attr('src');
+                $(this).attr('data-original',src);
+                $(this).attr('src','img/loading.gif');
+            })
+            imgLazuLoad.css({
+                'width':'500px',
+                'height':'500px'
+            });
+
+            imgLazuLoad.lazyload({
+                placeholder : "img/loading.gif",
+                effect: "fadeIn"
+            });
+        });
+    </script>
+    <style>
+        img a,img{border:0px;}
+        div{ margin-bottom:10px;}
+    </style>
 </head>
 <body>
+<!--<img src="img/01.jpg" /><br />-->
+<div><a href="#"><img class="lazy" src="img/01.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/02.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/03.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/04.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/05.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/06.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/07.jpg"></a></div>
+<div><a href="#"><img class="lazy" src="img/08.jpg"></a></div>
 
-<canvas></canvas>
 
 
-<div class="container">
-	
-  <ul id="media">
-	<h1>myworks</h1>
-	<h4>wellcom to myworks</h4>
-    <li>
-      <a href="http://www.howzhi.com/" target="_blank">
-        <p><img src="images/01.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-            <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://www.sunnytao.hk/" target="_blank">
-        <p><img src="images/02.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-            <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://1.xiu.com/" target="_blank">
-        <p><img src="images/03.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-            <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://www.czbx18.com/cbwMobile/resources/html5/cbwIndex/cbwIndex.html" target="_blank">
-        <p><img src="images/04.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-            <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://www.zensehotel.com/" target="_blank">
-        <p><img src="images/05.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-            <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://wx.zensehotel.com/MicroShop/Index?from=singlemessage&isappinstalled=0" target="_blank">
-        <p><img src="images/06.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-           <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://www.lamiu.com/" target="_blank">
-        <p><img src="images/07.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-           <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://slwf.qiniudn.com/" target="_blank">
-        <p><img src="images/08.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-           <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="http://trybox.cn/" target="_blank">
-        <p><img src="images/09.jpg" alt=""></p>
-        <div class="desc">
-          <p>
-           <b>去看看</b>
-          </p>
-        </div>
-      </a>
-    </li>
-  </ul>
-</div>
-
-<script src="js/jquery-1.11.3.min.js"></script>
-<script src="js/works.js"></script>
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/1.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/2.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/3.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/4.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/5.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/6.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/7.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/8.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/9.jpg"></a></div>-->
+<!--<div><a href="#"><img src="images/loading.gif" data-original="images/10.jpg"></a></div>-->
 </body>
 </html>
